# uselessgoddess-dunes

./: CLAUDE.md  Cargo.toml  TREE_COMPARISON.md  issue-46-details.json  pr-48-details.json  rustfmt.toml
.github/: custom-bench.html  pages-index.html
.github/scripts/: format_benchmarks.py
.github/workflows/: benchmark.yml  ci.yml
crates/doublets/: Cargo.toml
crates/doublets/benches/: doublets_bench.rs
crates/doublets/src/: error.rs  handler.rs  lib.rs  link.rs  store.rs  traits.rs
crates/doublets/tests/: basic.rs  debug.rs  tree_backends.rs
crates/mem/: Cargo.toml  SAFETY.md
crates/mem/src/: alloc.rs  file.rs  lib.rs  place.rs  pre.rs  raw.rs  uninit.rs
crates/mem/tests/: alloc.rs  fuzz.rs  miri.rs  pre.rs  tests.rs
crates/trees/: Cargo.toml
crates/trees/benches/: sbt_bench.rs  trees_bench.rs
crates/trees/benches/common/: mod.rs
crates/trees/fuzz/: Cargo.toml  README.md
crates/trees/fuzz/fuzz_targets/: fuzz_tree_operations.rs
crates/trees/src/: art.rs  lib.rs  node.rs  sbt.rs  store.rs  treap.rs  tree.rs
crates/trees/tests/: basic.rs  proptest.proptest-regressions  proptest.rs
crates/trees/tests/common/: mod.rs
dev/bench/: custom.html  data.js  index.html
experiments/: debug_remove.rs
scripts/: clean_benchmark_data.py
