[package]
name = "trees"
version = "0.1.0"
edition = "2024"
authors = ["uselesssgoddess"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trees_bench"
harness = false
