[package]
name = "trees-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
trees = { path = ".." }
arbitrary = { version = "1.3", features = ["derive"] }

[[bin]]
name = "fuzz_tree_operations"
path = "fuzz_targets/fuzz_tree_operations.rs"
test = false
doc = false

[profile.release]
debug = 1
